fixed slideOverview not being visible

--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,5 @@
 /* CSS declarations go here */
+
+.reveal.center.slide.overview{
+  min-height: 400px !important;
+}
